v0.0.7
 - Added sampler.py module
 - added radial power law and uniform samplers to sampler module
 - added write_to_csv() to convenience module

v0.0.6
 - Added fitter.py module

v0.0.5
 - added alos_obs(), pbdot_intr(), and intr_over_gr() to convenience submodule

v0.0.4
 - had to rework how some decorators work to avoid circular imports
 - @fix_arrays is now in glob.py (new)
 - @convert_to_frame is now in transforms.py
 - some bug fixes so that the decorators also worked for methods (python3 fix your game)
 - added some useful constants to glob.py

v0.0.3
 - borrowed some coordinate transforms from mwahpy
 - added transforms module
 - added convenience.pdot_shk() and convenience.dm_over_bary_alos()
 - added decorators module
 - borrowed the fix_arrays decorator from mwahpy
 - added convert_to_frame decorator for generic frame transformations (currently supports 'gal' and 'cart')

v0.0.2 
 - added convenience module
 - added pbdot_gr() function
 - did some sphinx testing

v0.0.1 (initial commit)
 - added potential models, plus .accel() and .alos() capabilities
 - added generic gala and galpy potential wrappers
 - added sphinx documentation generator
