@@ -1,0 +1,5 @@
+sphinx==7.2.6
+sphinx-math-dollar==1.2.1
+sphinx-rtd-theme==2.0.0
+#readthedocs-sphinx-search==0.1.1
+numpy==1.26.4
